Fix alignment of the new template button

--- a/packages/edit-site/src/components/navigation-sidebar/navigation-panel/style.scss
+++ b/packages/edit-site/src/components/navigation-sidebar/navigation-panel/style.scss
@@ -106,3 +106,12 @@
 	padding-top: $grid-unit-05;
 	color: $gray-700;
 }
+
+.edit-site-navigation-panel__new-template-dropdown {
+	display: flex;
+	margin: 0 0 0 $grid-unit-15;
+
+	button {
+		margin: 0;
+	}
+}
